sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: not found: value len
  var n:Int= len(data)
             ^AlgBubbleSort1:4: error: not found: value data
  var n:Int= len(data)
                 ^