sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var echanges:Boolean=true;
  var n:Int= len(data)
  while(echanges==true){
    echanges=false;
    for(i<-0 to 8){
    	if (isSmaller(i+1,i)){
        echanges=true
      	swap(i,i+1)
    	}
  	}
	}
}

